--- a/buy.html
+++ b/buy.html
@@ -125,20 +125,19 @@
                     <h1 class="display-4 fw-bold lh-1">
                         Unete a la comunidad de usuarios
                     </h1>
-                    <p class="lead">Quickly design and customize responsive mobile-first
-                        sites with Bootstrap, the world’s most popular front-end open
-                        source
-                        toolkit, featuring Sass variables and mixins, responsive grid
-                        system,
-                        extensive prebuilt components, and powerful JavaScript plugins.
+                    <p class="lead">
+                        Crea una cuenta y disfruta de todos los beneficios que tenemos para ti, además
+                        configura tu perfil para obtener todas las ventajas que ofrecemos y asi estar
+                        mas seguro de salir sin preocupaciones mientras nosotros nos encargamos de
+                        cuidate aun cuando tu no puedas hacerlo.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <button type="button" class="btn btn-danger btn-lg px-4 me-md-2 fw-bold">Unirme</button>
+                        <button type="button" class="btn btn-outline-danger btn-lg px-4">Ver mas</button>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded" src="https://dummyimage.com/720x450/5fa9f8/efefef" alt="" width="720">
+                    <img class="rounded" src="https://dummyimage.com/720x450/D92713/efefef" alt="" width="720">
                 </div>
             </div>
         </div>
