--- a/buy.html
+++ b/buy.html
@@ -147,7 +147,7 @@
         <div class="container-fluid pt-5 ">
             <div class="row align-items-start justify-content-around">
                 <div class="col-12 col-md-4 offset-md-1">
-                    <h2 class="fw-bold">500 section blocks + 30 navbars</h2>
+                    <h2 class="fw-bold">Mira todos los beneficios que tenemos para ti</h2>
                     <p class="text-h3 mt-3  lead">Find what you need easily, using quick
                         navigation among screens that we divided into 15 categories
                         depending on their purpose and characteristics:
