--- a/about.html
+++ b/about.html
@@ -30,44 +30,44 @@
                         Perfil
                     </a>
                     <div class="dropdown-menu dropdown-menu-right p-3" aria-labelledby="navbarDropdown" style="min-width:300px">
-                        <h6>Nombre de Usuario</h6>
+                        <h6 class="text-danger">Nombre de Usuario</h6>
                         <div class="dropdown-divider"></div>
                         <ul class="shopping-cart-items pt-2 pl-0">
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/hospital.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="#">Emergencia</a>
+                                        <a href="profile.html" class="text-danger">Emergencia</a>
                                     </h6>
                                     <span class="text-muted">Completa tus datos para una mejor solucion</span>
                                 </div>
                             </li>
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/apple-contacts.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="#">Contactos</a>
+                                        <a href="profile.html" class="text-danger">Contactos</a>
                                     </h6>
                                     <span class="text-muted">Agrega o modifica contactos en caso de emergencia</span>
                                 </div>
                             </li>
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/buy-for-cash.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a [routerLink]="['buy']">Comprar</a>
+                                        <a href="buy.html" class="text-danger">Comprar</a>
                                     </h6>
                                     <span class="text-muted">Comprar dispositivo para salvar vidas</span>
                                 </div>
                             </li>
                         </ul>
-                        <a [routerLink]="['profile']" class="btn btn-md btn-block btn-primary mt-3" style="margin: 0;">Ver Perfil</a>
+                        <a href="profile.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -316,52 +316,52 @@
     <div class="container">
         <div class="row align-items-top text-center text-md-start">
             <div class="col-12 col-sm-6 col-md-4">
-                <h3><strong>Country A</strong></h3>
-                <p>Street Address
-                    <br>Contact Name
+                <h3><strong>San Juan del Rio</strong></h3>
+                <p>Universidad Tecnologica de San Juan del Rio
+                    <br>Erick Pinzon
                 </p>
-                <p>+44 800 400 0000</p>
+                <p>427 163 5691</p>
                 <p>
-                    <a href="#">infob@bootstraptor.com</a>
+                    <a href="#" class="text-danger">erickph.ti21@utsjr.edu.mx</a>
                 </p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0">
-                <h3><strong>Country B</strong></h3>
-                <p>Street Address 100
-                    <br>Contact Name
+                <h3><strong>San Juan del Rio</strong></h3>
+                <p>Universidad Tecnologica de San Juan del Rio
+                    <br>Uriel Gomez
                 </p>
-                <p>+13 800 312 0000</p>
+                <p>427 227 6427</p>
                 <p>
-                    <a href="#">infob@bootstraptor.com</a>
+                    <a href="#" class="text-danger">urielgb.ti21@utsjr.edu.mx</a>
                 </p>
             </div>
             <div class="col-12 col-md-4 mt-5 mt-md-0 text-md-start">
-                <h3><strong>About Us</strong></h3>
-                <p>Bootstraptor provides high quality assets for your business. We
-                    help entrepreneurs with great ideas achieving their goals
-                    faster.</p>
+                <h3><strong>Acerca de Nosotros</strong></h3>
+                <p>Somos un grupo de 3 estudiantes emocionados por desarollar nuestro primer proyecto
+                    en grande, con Heart-Life queremos ayudar a las personas mas vulnerables para poder
+                    darles una herramienta mas con la que sobrevivir</p>
                 <p class="text-h3">
                     <a href="#">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <i class="fab fa-twitter text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <i class="fab fa-facebook text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <i class="fab fa-instagram text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="fab fa-pinterest text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-google" aria-hidden="true"></i>
+                        <i class="fab fa-google text-danger" aria-hidden="true"></i>
                     </a>
                 </p>
             </div>
         </div>
         <div class="row mt-5">
             <div class="col text-center">
-                © 2021 Bootstraptor. All Rights Reserved
+                © 2022 Heart-Design. All Rights Reserved
             </div>
         </div>
     </div>
