--- a/index.html
+++ b/index.html
@@ -30,44 +30,44 @@
                         Perfil
                     </a>
                     <div class="dropdown-menu dropdown-menu-right p-3" aria-labelledby="navbarDropdown" style="min-width:300px">
-                        <h6>Nombre de Usuario</h6>
+                        <h6 class="text-danger">Nombre de Usuario</h6>
                         <div class="dropdown-divider"></div>
                         <ul class="shopping-cart-items pt-2 pl-0">
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/hospital.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="#">Emergencia</a>
+                                        <a href="profile.html" class="text-danger">Emergencia</a>
                                     </h6>
                                     <span class="text-muted">Completa tus datos para una mejor solucion</span>
                                 </div>
                             </li>
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/apple-contacts.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="#">Contactos</a>
+                                        <a href="profile.html" class="text-danger">Contactos</a>
                                     </h6>
                                     <span class="text-muted">Agrega o modifica contactos en caso de emergencia</span>
                                 </div>
                             </li>
                             <li class="row mt-3">
                                 <div class="col-4">
-                                    <img src=" https://dummyimage.com/50/5fa9f8/ffffff" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    <img src="https://img.icons8.com/ios/50/undefined/buy-for-cash.png" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="buy.html">Comprar</a>
+                                        <a href="buy.html" class="text-danger">Comprar</a>
                                     </h6>
                                     <span class="text-muted">Comprar dispositivo para salvar vidas</span>
                                 </div>
                             </li>
                         </ul>
-                        <a href="profile.html" class="btn btn-md btn-block btn-primary mt-3" style="margin: 0;">Ver Perfil</a>
+                        <a href="profile.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -128,7 +128,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                             <div class="card-body">
-                                <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios/80/undefined/keyhole-shield.png">
                                 <h4 class="display-5 mt-3 text-white">Seguridad</h4>
                                 <p>Te sentirás más seguro al tener una herramienta que pida ayuda por ti en caso de que sufras algún percance.</p>
                             </div>
@@ -137,7 +137,7 @@
                     <div class="col-md-6 col-lg-4">
                             <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                                 <div class="card-body">
-                                    <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                    <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios/80/undefined/trust--v1.png">
                                     <h4 class="display-5 mt-3 text-white">Confianza</h4>
                                     <p>Ten la seguridad de salir a hacer lo que más te gusta, y tener una herramienta que te
                                         apoye en una situación de crisis. Siempre estaremos contigo.</p>
@@ -147,7 +147,7 @@
                     <div class="col-md-6 col-lg-4">
                             <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                                 <div class="card-body">
-                                    <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                    <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios/80/undefined/accessibility2.png">
                                     <h4 class="display-5 mt-3 text-white">Accesibilidad</h4>
                                     <p>No te preocupes por grandes tarifas, Heart Designs es una empresa que tiene un plan pensado en ti.
                                     </p>
@@ -157,7 +157,7 @@
                     <div class="col-md-6 col-lg-4">
                             <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                                 <div class="card-body">
-                                    <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                    <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios-glyphs/80/undefined/guarantee--v1.png">
                                     <h4 class="display-5 mt-3 text-white">Garantia</h4>
                                     <p>Heart Disigns constantemente trabaja en actualizaciones que permiten brindar mejores comunicaciones.</p>
                                 </div>
@@ -166,7 +166,7 @@
                     <div class="col-md-6 col-lg-4">
                             <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                                 <div class="card-body">
-                                    <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                    <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios/80/undefined/check-file.png">
                                     <h4 class="display-5 mt-3 text-white">Calidad</h4>
                                     <p>Ten la seguridad de recibir un producto confiable y que constantemente trabajamos en mejoras.</p>
                                 </div>
@@ -175,7 +175,7 @@
                     <div class="col-md-6 col-lg-4">
                             <div class="card card-block card-default text-center animated mb-4 shadow-lg  text-white bg-danger">
                                 <div class="card-body">
-                                    <img alt="image" class="rounded-circle img-fluid d-block mx-auto mt-2 mb-4" src=" https://dummyimage.com/60x60/D92713/efefef">
+                                    <img alt="image" class="img-fluid d-block mx-auto mt-2 mb-4" src="https://img.icons8.com/ios/80/undefined/box-important--v1.png">
                                     <h4 class="display-5 mt-3 text-white">Atencion</h4>
                                     <p>Atención las 24 horas del dia, los 7 dias de la semana. Contactanos en cualquier momento. </p>
                                 </div>
@@ -191,7 +191,7 @@
             <div class="container">
                 <div class="row d-flex justify-content-center">
                     <div class="col-sm-12 col-md-5 text-xs-center align-content-center text-md-right img-container my-2">
-                        <img src=" https://dummyimage.com/450x700/DC3545/fffffffff" alt="" class="img-fluid d-sm-none d-md-block d-lg-block mt-5">
+                        <img src=" https://images.unsplash.com/photo-1553969546-6f7388a7e07c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80" alt="" class="img-fluid d-sm-none d-md-block d-lg-block mt-5">
                     </div>
                     <div class="col-sm-12 col-md-6 align-content-center      flex-wrap d-flex">
                         <h1 class="display-4mb-3 mt-5">Siéntete libre de salir a cualquier lugar sin preocupaciones</h1>
@@ -237,36 +237,37 @@
             <div class="row text-center">
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="display-4 text-primary mb-2">
-                        <i class="fab fa-grav"></i>
+                        <i class="fab fa-grav text-danger"></i>
                     </div>
-                    <h4 class="h5">Creative ideas</h4>
-                    <p>CurabiturAchieve virtually any look and layout from within the
-                        one template.</p>
-                    <a href="#">
+                    <h4 class="h5 text-danger">Dedicados</h4>
+                    <p>Dedicamos el mayor tiempo positble para que la experiencia de usuario sea la idonea
+                    en cuanto los usuarios entren a la pagina</p>
+                    <a href="#" class="text-danger">
                         Learn More
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="display-4 text-primary mb-2">
-                        <i class="fab fa-connectdevelop"></i>
+                        <i class="fab fa-connectdevelop text-danger"></i>
                     </div>
-                    <h4 class="h5">Excellent features</h4>
-                    <p>We strive to figure out ways to help your audience grow through
-                        all platforms.</p>
-                    <a href="#!">
+                    <h4 class="h5 text-danger">Responsables</h4>
+                    <p>Nos encargamos de que todos tus datos sean privados y no compartimos con nadie tus contactos
+                    ni datos confidenciales</p>
+                    <a href="#!" class="text-danger">
                         Learn More
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="display-4 text-primary mb-2">
-                        <i class="far fa-gem"></i>
+                        <i class="far fa-gem text-danger"></i>
                     </div>
-                    <h4 class="h5">Fully responsive</h4>
-                    <p>Find what you need in one template and combine features at will.
+                    <h4 class="h5 text-danger">Entusiasmados</h4>
+                    <p>Nos emociona ver nuestro proyecto crecer y es por eso que dedicamos todo nuestro esfuerzo
+                        en conseguir que te sientas seguro cuando sales
                     </p>
-                    <a href="#!">
+                    <a href="#!" class="text-danger">
                         Learn More
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -288,11 +289,18 @@
                 </p>
                 <p>427 163 5691</p>
                 <p>
-                    <a href="#">erickph.ti21@utsjr.edu.mx</a>
+                    <a href="#" class="text-danger">erickph.ti21@utsjr.edu.mx</a>
                 </p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0">
-
+                <h3><strong>San Juan del Rio</strong></h3>
+                <p>Universidad Tecnologica de San Juan del Rio
+                    <br>Uriel Gomez
+                </p>
+                <p>427 227 6427</p>
+                <p>
+                    <a href="#" class="text-danger">urielgb.ti21@utsjr.edu.mx</a>
+                </p>
             </div>
             <div class="col-12 col-md-4 mt-5 mt-md-0 text-md-start">
                 <h3><strong>Acerca de Nosotros</strong></h3>
@@ -301,19 +309,19 @@
                     darles una herramienta mas con la que sobrevivir</p>
                 <p class="text-h3">
                     <a href="#">
-                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <i class="fab fa-twitter text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <i class="fab fa-facebook text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <i class="fab fa-instagram text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <i class="fab fa-pinterest text-danger" aria-hidden="true"></i>
                     </a>&nbsp;&nbsp;
                     <a href="#">
-                        <i class="fab fa-google" aria-hidden="true"></i>
+                        <i class="fab fa-google text-danger" aria-hidden="true"></i>
                     </a>
                 </p>
             </div>
