--- a/buy.html
+++ b/buy.html
@@ -455,9 +455,10 @@
             </div>
             <div class="col-12 col-md-4 mt-5 mt-md-0 text-md-start">
                 <h3><strong>Acerca de Nosotros</strong></h3>
-                <p>Somos un grupo de 3 estudiantes emocionados por desarollar nuestro primer proyecto
-                    en grande, con Heart-Life queremos ayudar a las personas mas vulnerables para poder
-                    darles una herramienta mas con la que sobrevivir</p>
+                <p>Somos una empresa nacida en 2021, creada por 3 estudiantes que buscan generar
+                    los productos de mas alta calidad y accesibilidad en nuestro pais. En Heart-Designs busamos
+                    ayudar a los sectores mas vulnerables poniendo en sus manos tecnologías sensillas y accesibles
+                    para darles un apoyo más en su salud diaria.</p>
                 <p class="text-h3">
                     <a href="#">
                         <i class="fab fa-twitter text-danger" aria-hidden="true"></i>
