--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                     <div class="display-4 text-primary mb-2">
                         <i class="fab fa-grav text-danger"></i>
                     </div>
-                    <h4 class="h5 text-danger">Dedicados</h4>
-                    <p>Dedicamos el mayor tiempo positble para que la experiencia de usuario sea la idonea
-                    en cuanto los usuarios entren a la pagina</p>
-                    <a href="#" class="text-danger">
-                        Learn More
+                    <h4 class="h5 text-danger">Mejora Continua</h4>
+                    <p>La constante entrega y esfuerzo en mejorar nuestros productos nos coloca como empresa
+                    lider en nuestro sector, ofreciendo ademas a nuestros clientes la mejor experiencia de usuario</p>
+                    <a href="about-us.html" class="text-danger">
+                        Ver mas
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
                 </div>
@@ -251,10 +251,11 @@
                     <div class="display-4 text-primary mb-2">
                         <i class="fab fa-connectdevelop text-danger"></i>
                     </div>
-                    <h4 class="h5 text-danger">Responsables</h4>
-                    <p>Nos encargamos de que todos tus datos sean privados y no compartimos con nadie tus contactos
-                    ni datos confidenciales</p>
-                    <a href="#!" class="text-danger">
+                    <h4 class="h5 text-danger">Transparencia</h4>
+                    <p>En nuestra empresa buscamos ser claros y conscisos en la informacion que compartimos con
+                    nuestros usuarios, siendo nuestra intención, generar confianza con nuestros clientes y seguridad al
+                    momento de escogernos.</p>
+                    <a href="about-us.html" class="text-danger">
                         Learn More
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -263,11 +264,12 @@
                     <div class="display-4 text-primary mb-2">
                         <i class="far fa-gem text-danger"></i>
                     </div>
-                    <h4 class="h5 text-danger">Entusiasmados</h4>
-                    <p>Nos emociona ver nuestro proyecto crecer y es por eso que dedicamos todo nuestro esfuerzo
-                        en conseguir que te sientas seguro cuando sales
+                    <h4 class="h5 text-danger">Responsabilidad</h4>
+                    <p>Guiandonos en los valores de confianza y respeto, buscamos cuidar los datos de nuestros clientes,
+                        entregar productos de la mas alta calidad y trabajando constantemente en la busqueda de la excelencia
+                        para mejorar como empresa.
                     </p>
-                    <a href="#!" class="text-danger">
+                    <a href="about-us.html" class="text-danger">
                         Learn More
                         <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -304,9 +306,10 @@
             </div>
             <div class="col-12 col-md-4 mt-5 mt-md-0 text-md-start">
                 <h3><strong>Acerca de Nosotros</strong></h3>
-                <p>Somos un grupo de 3 estudiantes emocionados por desarollar nuestro primer proyecto
-                    en grande, con Heart-Life queremos ayudar a las personas mas vulnerables para poder
-                    darles una herramienta mas con la que sobrevivir</p>
+                <p>Somos una empresa nacida en 2021, creada por 3 estudiantes que buscan generar
+                    los productos de mas alta calidad y accesibilidad en nuestro pais. En Heart-Designs busamos
+                    ayudar a los sectores mas vulnerables poniendo en sus manos tecnologías sensillas y accesibles
+                    para darles un apoyo más en su salud diaria.</p>
                 <p class="text-h3">
                     <a href="#">
                         <i class="fab fa-twitter text-danger" aria-hidden="true"></i>
