Profile/General terminado

--- a/buy.html
+++ b/buy.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="profile.html" class="text-danger">Emergencia</a>
+                                        <a href="profile/general.html" class="text-danger">Emergencia</a>
                                     </h6>
                                     <span class="text-muted">Completa tus datos para una mejor solucion</span>
                                 </div>
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="profile.html" class="text-danger">Contactos</a>
+                                        <a href="profile/general.html" class="text-danger">Contactos</a>
                                     </h6>
                                     <span class="text-muted">Agrega o modifica contactos en caso de emergencia</span>
                                 </div>
@@ -66,7 +66,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <a href="profile.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
+                        <a href="profile/general.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
                     </div>
                 </li>
                 <li class="nav-item active">
