--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
     <title>About Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/img/Logo.png">
+    <link rel="stylesheet" href="assets/css/personalStyle.css">
     <link rel="stylesheet"
           href=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css ">
     <link rel="stylesheet"
@@ -39,7 +40,7 @@
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="profile.html" class="text-danger">Emergencia</a>
+                                        <a href="profile/general.html" class="text-danger">Emergencia</a>
                                     </h6>
                                     <span class="text-muted">Completa tus datos para una mejor solucion</span>
                                 </div>
@@ -50,7 +51,7 @@
                                 </div>
                                 <div class="col-8">
                                     <h6>
-                                        <a href="profile.html" class="text-danger">Contactos</a>
+                                        <a href="profile/general.html" class="text-danger">Contactos</a>
                                     </h6>
                                     <span class="text-muted">Agrega o modifica contactos en caso de emergencia</span>
                                 </div>
@@ -67,7 +68,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <a href="profile.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
+                        <a href="profile/general.html" class="btn btn-md btn-block btn-danger mt-3" style="margin: 0;">Ver Perfil</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -312,7 +313,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mx-auto mb-3">
+                <div class="col-md-4 mx-auto mb-3 card">
                     <div class="card">
                         <img class="card-img-top shadow" src=" https://dummyimage.com/350x350/007bff/ffffff" alt="Profile">
                         <div class="card-body text-center">
