--- a/profile/emergencyContacts.html
+++ b/profile/emergencyContacts.html
@@ -9,7 +9,7 @@
           href=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css ">
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <link rel="stylesheet" href="assets/css/themeStyle.css">
+    <link rel="stylesheet" href="../assets/css/themeStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
 </head>
@@ -35,8 +35,8 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link">
+            <li class="nav-item">
+                <a class="nav-link" href="general.html">
                     <i class="fas fa-fw fa-home"></i>
                     <span>General</span></a>
             </li>
@@ -50,8 +50,8 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link">
+            <li class="nav-item active">
+                <a class="nav-link" href="emergencyContacts.html">
                     <i class="fas fa-fw fa-phone"></i>
                     <span>Contactos Emergencia</span>
                 </a>
@@ -177,6 +177,88 @@
                     </ul>
                 </nav>
                 <!-- End of Topbar -->
+
+                <div class="container">
+                    <div class="container-xl">
+                        <div class="table-responsive">
+                            <div class="table-wrapper">
+                                <div class="table-title">
+                                    <div class="row">
+                                        <div class="col-sm-8 text-danger">
+                                            <h2>Administrar <b>Contactos de Emergencia</b></h2>
+                                        </div>
+                                        <div class="col-sm-4 text-right">
+                                            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons"></i> <span>Agregar</span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Nombre</th>
+                                        <th>Email</th>
+                                        <th>Address</th>
+                                        <th>Phone</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td>Thomas Hardy</td>
+                                        <td>thomashardy@mail.com</td>
+                                        <td>89 Chiaroscuro Rd, Portland, USA</td>
+                                        <td>(171) 555-2222</td>
+                                        <td>
+                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
+                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Dominique Perrier</td>
+                                        <td>dominiqueperrier@mail.com</td>
+                                        <td>Obere Str. 57, Berlin, Germany</td>
+                                        <td>(313) 555-5735</td>
+                                        <td>
+                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
+                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Maria Anders</td>
+                                        <td>mariaanders@mail.com</td>
+                                        <td>25, rue Lauriston, Paris, France</td>
+                                        <td>(503) 555-9931</td>
+                                        <td>
+                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
+                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Fran Wilson</td>
+                                        <td>franwilson@mail.com</td>
+                                        <td>C/ Araquil, 67, Madrid, Spain</td>
+                                        <td>(204) 619-5731</td>
+                                        <td>
+                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
+                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Martin Blank</td>
+                                        <td>martinblank@mail.com</td>
+                                        <td>Via Monte Bianco 34, Turin, Italy</td>
+                                        <td>(480) 631-2097</td>
+                                        <td>
+                                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i></a>
+                                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- End of Content Wrapper -->
         </div>
